[tool.poetry]
name = "cenfind"
version = "v0.11.7"
description = "Score cells for centrioles in IF data"
authors = ["Leo Burgy <leo.burgy@epfl.ch>"]
repository = "https://github.com/UPGON/cenfind"
readme = "README.md"
keywords = ["microscopy", "scientific", "biology", "image-analysis"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.5"
opencv-python = "^4.7.0.72"
llvmlite = "0.39.1"
numba = "0.56.4"
scipy = "^1.7.1"
stardist = "^0.8.3"
ortools = "9.4.1874"
csbdeep = "^0.7.3"
tensorflow-macos = {version = "2.9.0", platform = "arm64"}
protobuf = "3.19.6"
spotipy-detector = "^0.1.0"
tifffile = "^2022.5.4"
tqdm = "^4.62.3"
pytomlpp = "^1.0.10"
scikit-image = "^0.19.2"
scikit-learn = "^1.2.1"
pandas = "^1.4.1"
tensorflow = {version = "^2.9.0", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
albumentations = "^1.3.0"
python-dotenv = "^0.21.1"
labelbox = "^3.36.1"

[tool.poetry.scripts]
cenfind = "cenfind.__main__:main"
evaluate = "cenfind.cli.evaluate:main"
vignettes = "cenfind.labelbox.vignettes:main"
upload = "cenfind.labelbox.upload_labels:main"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "poetry.core.masonry.api"
