[tool.poetry]
name = "cenfind"
version = "0.14.0"
description = "Score cells for centrioles in IF data"
authors = ["Leo Burgy <leo.burgy@epfl.ch>"]
repository = "https://github.com/UPGON/cenfind"
readme = "README.md"
keywords = ["microscopy", "scientific", "biology", "image-analysis"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
attrs = "^22.2.0"
tifffile = "^2022.5.4"
numpy = "^1.23.5"
scipy = "^1.7.1"
opencv-python = "^4.7.0.72"
scikit-image = "^0.19.2"
scikit-learn = "^1.2.1"
stardist = "^0.8.3"
spotipy-detector = "^0.1.0"
ortools = "9.4.1874"
csbdeep = "^0.7.3"
tensorflow = { version = "2.9.0", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }
tensorflow-macos = { version = "2.9.0", platform = "darwin" }
tensorflow-metal = { version = "0.5.0", platform = "darwin" }
numba = "0.56.4"
llvmlite = "0.39.1"
protobuf = "3.19.6"
pandas = "^1.4.1"
tqdm = "^4.62.3"
albumentations = "^1.3.0"
seaborn = "^0.13.0"

[tool.poetry.scripts]
cenfind = "cenfind.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
python-dotenv = "^0.21.1"
pytomlpp = "^1.0.10"
labelbox = { extras = ["data"], version = "^3.46.0" }

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
furo = "^2023.9.10"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "poetry.core.masonry.api"
